--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:lib": "cd projects/ng-asax-jalali-datepicker && ng build",
+    "publish:lib": "npm run build:lib && cd dist/ng-asax-jalali-datepicker && npm link && npm publish",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
