--- a/projects/ng-asax-jalali-date-range-picker/package.json
+++ b/projects/ng-asax-jalali-date-range-picker/package.json
@@ -4,8 +4,8 @@
   "peerDependencies": {
     "@angular/common": "^17.3.0",
     "@angular/core": "^17.3.0",
-    "lodash": "^4.17.21",
-    "jalali-moment": "^3.3.11"
+    "jalali-moment": "^3.3.11",
+    "lodash": "^4.17.21"
   },
   "dependencies": {
     "tslib": "^2.3.0"
