--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -13,7 +14,8 @@
     "paths": {
       "ng-asax-jalali-date-range-picker": [
         "./dist/ng-asax-jalali-date-range-picker"
-      ]
+      ],
+      "ng-test2": ["dist/ng-test2"]
     },
     "esModuleInterop": true,
     "sourceMap": true,
