--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "jalali-moment": "^3.3.11",
     "rxjs": "7.5.6",
     "tslib": "^2.1.0",
-    "zone.js": "~0.11.4",
-    "lodash": "^4.17.21"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.1",
