--- a/projects/ng-asax-jalali-date-range-picker/tsconfig.lib.json
+++ b/projects/ng-asax-jalali-date-range-picker/tsconfig.lib.json
@@ -2,13 +2,12 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "typeRoots": ["node_modules/@types"],
     "outDir": "../../out-tsc/lib",
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
     "types": []
   },
-  "exclude": [
-    "**/*.spec.ts"
-  ]
+  "exclude": ["**/*.spec.ts"]
 }
